--- a/.gitignore
+++ b/.gitignore
@@ -14,9 +14,10 @@
 /pico_sim_vs/Release
 /pico_sim_vs/pico_sim_vs.vcxproj.user
 /src/pico_sim_old.c
-/c4_demo/x64/Debug
-/pico_sim_vs/c4_demo/x64/Debug
+/c4_demo/x64
+/pico_sim_vs/c4_demo/x64
 /c4_lib/x64
 /doc/draft.txt
 /doc/draft.xml
 /doc/tracker.log
+/pico_sim_vs/c4_demo/x64
