Add a checking state

--- a/pico_sim_vs/pico_sim_vs.vcxproj
+++ b/pico_sim_vs/pico_sim_vs.vcxproj
@@ -71,16 +71,16 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <TargetName>pico_sim_vs</TargetName>
+    <TargetName>pico_sim</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <TargetName>pico_sim_vs</TargetName>
+    <TargetName>pico_sim</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <TargetName>pico_sim_vs</TargetName>
+    <TargetName>pico_sim</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <TargetName>pico_sim_vs</TargetName>
+    <TargetName>pico_sim</TargetName>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
