Add step for picoquic ns in github action

--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -24,4 +24,5 @@ jobs:
           ls -l ./ci
           ./ci/build_picotls.sh
           ./ci/build_picoquic.sh
+          ./ci/build_picoquic_ns.sh
      
