--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -30,4 +30,35 @@ jobs:
       - name: Install picoquic_ns
         run: |
           ./ci/build_picoquic_ns.sh
+      - name: Do simple tests
+        run: |
+          ulimit -c unlimited -S
+          # Iterate through all the scenarios
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_alone.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_alone_200.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_vs_c4.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_after_c4.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_before_c4.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_vs_cubic.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_wifi_fade.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_wifi_suspension.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media10.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media_wf.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media_ws.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_short_long.txt && QDRESULT=$? 
+          if [ ${QDRESULT} != 0 ]; then exit 1; fi;
+          exit 0
      
