--- a/.github/workflows/test-suite.yml
+++ b/.github/workflows/test-suite.yml
@@ -33,37 +33,33 @@ jobs:
       - name: Do simple tests
         run: |
           pwd
-          echo "local"
-          ls .
-          echo "one up"
-          ls ..
           ulimit -c unlimited -S
           # Iterate through all the scenarios
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_alone.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_alone.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_alone_200.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_alone_200.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_vs_c4.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_vs_c4.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_after_c4.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_after_c4.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_before_c4.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_before_c4.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_vs_cubic.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_vs_cubic.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_wifi_fade.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_wifi_fade.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_wifi_suspension.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_wifi_suspension.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media10.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media10.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media_wf.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media_wf.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media_ws.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_media_ws.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
-          ./picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_short_long.txt && QDRESULT=$? 
+          ../picoquic_ns/pico_sim -S ../../picoquic ../sim_specs/c4_short_long.txt && QDRESULT=$? 
           if [ ${QDRESULT} != 0 ]; then exit 1; fi;
           exit 0
      
